syntax = "proto3";

package api.task;

import "google/protobuf/timestamp.proto";

option go_package = "api/task";

enum TaskState {
	option allow_alias = true;
	TASK_STATE_UNSPECIFIED = 0;

	TASK_STATE_PENDING = 0;
	TASK_STATE_RUNNING = 1;
	TASK_STATE_SUCCEEDED = 2;
	TASK_STATE_CANCELING = 3;
	TASK_STATE_CANCELED = 4;
	TASK_STATE_FAILED = 5;
}

message Task {
	// @gotags: gorm:"not null;unique"
	string id = 1;
	// @gotags: gorm:"serializer:protobuf_timestamp;type:datetime"
	google.protobuf.Timestamp start_time = 2;
	// @gotags: gorm:"serializer:protobuf_timestamp;type:datetime"
	google.protobuf.Timestamp end_time   = 3;

	// @gotags: gorm:"not null;"
	string    name = 4;
	TaskState state = 5;
	double progress = 6;
	string progress_state = 7;
	string log = 8;
	string err = 9;
}

message ListTasksRequest {
	map<string, string> filter = 1;
}

message ListTasksResponse {
	repeated Task results = 1;
}

message RetryTaskRequest {
	repeated string tasks = 1;
}

message RetryTaskResponse {
}

message CancelTaskRequest {
	repeated string tasks = 1;
}

message CancelTaskResponse {
}

message RemoveTaskRequest {
	repeated string tasks = 1;
}

message RemoveTaskResponse {
}